# Model_Deployment

./: README.md
Libtorch_Torchscript/: CMakeLists.txt
Onnx_Opencv/: CMakeLists.txt  README.md  classification.cpp  resnet_onnx.py
Opencv_yolov4_Cuda/: CMakeLists.txt  README.md  yolov4.py  yolov4_opencv_dnn_cuda.cpp
PytorchExtNcRelu/: README.md  ncrelu.cpp  setup.py  testNcRelu.py
PytorchExtNcReluCuda/: README.md  ncrelu_cuda.cpp  ncrelu_cuda_kernel.cu  setup.py  test_ncrelu_cuda.py
